Prepare for Render deployment

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,8 +14,8 @@ video-upload-dir=C:\Users\HP\Videos\videos
 spring.servlet.multipart.max-request-size=200MB
 spring.servlet.multipart.max-file-size=200MB
 
-#cloudinary configuration
-cloudinary.cloud_name=${CLOUDINARY_NAME}
-cloudinary.api_key=${CLOUDINARY_API_KEY}
-cloudinary.api_secret=${CLOUDINARY_API_SECRET}
+#cloudinary configuration (allow empty defaults so app can start when env vars are not provided)
+cloudinary.cloud_name=${CLOUDINARY_NAME:}
+cloudinary.api_key=${CLOUDINARY_API_KEY:}
+cloudinary.api_secret=${CLOUDINARY_API_SECRET:}
 
